--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <h3>PC Optimalizace</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at cupiditate laborum quae facere
-                debitis ipsam quasi, natus quibusdam officiis fugit repellat veniam totam asperiores doloremque nobis.
+            <p>Inovativní program pro optimalizaci a vylepšení výkonu počítače. Získávejte maximální výkon a stabilitu svého systému díky intuitivnímu uživatelskému rozhraní a rozsáhlým funkcím. Ideální pro hráče i běžné uživatele. 
+            Získejte neomezenou podporu a aktualizace za příznivou cenu. Vylepšete svůj počítač s InfinityX a dosáhněte optimálního výkonu a zážitku
                 <span class="animate" style="--i:4;"></span>
             </p>
 
@@ -87,10 +87,7 @@
 
         <div class="about-content">
             <h3>InfinityX<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium dolorum recusandae saepe magni
-                eveniet provident voluptate cupiditate sapiente vero numquam soluta non amet voluptatem ipsam eius quam
-                molestias pariatur, eaque a! Minus repudiandae sapiente asperiores aliquid magnam iste vel quis officiis
-                odio laudantium numquam minima, dolorem officia esse, quidem ipsa.
+            <p>Optimalizujte a vylepšete výkon svého počítače s programem InfinityX. Tento inovativní program  nabízí uživatelům možnost dosáhnout maximálního výkonu a efektivnosti jejich systémů. S jednoduchým uživatelským rozhraním a širokou škálou funkcí, včetně optimalizace počítače, vyčištění disku a přizpůsobení herního prostředí, je InfinityX ideální volbou pro hráče i běžné uživatele. Zajišťuje bezpečnost a spolehlivost díky zálohování registru. Navíc automaticky rozpozná grafickou kartu a přizpůsobí nastavení pro optimální výkon. S podporou a nejnovějšími aktualizacemi zdarma se budete mít jistotu, že vždy získáte přístup ke všem novým funkcím a vylepšením. Za příznivou cenu získáte InfinityX, který vám poskytne všechny nástroje potřebné k optimalizaci a vylepšení vašeho počítače. Zlepšete svůj uživatelský zážitek s InfinityX
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
