--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#about">O programu</a>
             <a href="#price-list">Ceník</a>
             <a href="#skills">Porovnání</a>
-            <a href="#contact">FAQ</a>
+            <a href="#faq">FAQ</a>
             <a href="#price-list">Přihlásit se</a>
 
             <span class="active-nav"></span>
@@ -37,7 +37,7 @@
     <!-- home section design -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1><span>InfinityX Tweaks</span><span class="animate" style="--i:2;"></span></h1>
+            <h1><span>InfinityX</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>PC Optimalizace</h3>
                 <span class="animate" style="--i:3;"></span>
@@ -55,9 +55,9 @@
         </div>
 
         <div class="home-sci">
-            <a href="https://discord.com/invite/Y6eCUpKcmX"><i class='bx bxl-discord'></i></a>
-            <a href="https://twitter.com/crazikkw"><i class='bx bxl-twitter'></i></a>
-            <a href="https://www.instagram.com/crazikk/"><i class='bx bxl-instagram'></i></a>
+            <a href="https://discord.com/invite/Y6eCUpKcmX"target="_blank"><i class='bx bxl-discord'></i></a>
+            <a href="https://twitter.com/crazikkw"target="_blank"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.instagram.com/crazikk/"target="_blank"><i class='bx bxl-instagram'></i></a>
             <span class="animate" style="--i:6;"></span>
         </div>
 
@@ -79,7 +79,7 @@
 
         <div class="about-content">
             <h3>InfinityX<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Optimalizujte a vylepšete výkon svého počítače s programem InfinityX. Tento inovativní program  nabízí uživatelům možnost dosáhnout maximálního výkonu a efektivnosti jejich systémů. S jednoduchým uživatelským rozhraním a širokou škálou funkcí, včetně optimalizace počítače, vyčištění disku a přizpůsobení herního prostředí, je InfinityX ideální volbou pro hráče i běžné uživatele. Zajišťuje bezpečnost a spolehlivost díky zálohování registru. Navíc automaticky rozpozná grafickou kartu a přizpůsobí nastavení pro optimální výkon. S podporou a nejnovějšími aktualizacemi zdarma se budete mít jistotu, že vždy získáte přístup ke všem novým funkcím a vylepšením. Za příznivou cenu získáte InfinityX, který vám poskytne všechny nástroje potřebné k optimalizaci a vylepšení vašeho počítače. Zlepšete svůj uživatelský zážitek s InfinityX
+            <p>InfinityX je inovativní program pro optimalizaci a vylepšení výkonu počítače, nabízející jednoduché uživatelské rozhraní a širokou škálu funkcí. Za příznivou cenu získáte nástroj pro zlepšení výkonu vašeho počítače
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
@@ -91,18 +91,19 @@
     </section>
 
     <section class="price-list" id="price-list">
-        <h2 class="heading">Price <span>List</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <h2 class="heading">Můj <span>ceník</span><span class="animate scroll" style="--i:1;"></span></h2>
       
         <div class="price-row">
           <div class="price-column">
             <div class="price-card">
               <div class="price-content">
-                <h3 class="title">InfinityX mini</h3>
-                <div class="price">€3.99 / 100 czk</div>
+                <h3 class="title">InfinityX STANDARD</h3>
+                <div class="price">€7.99 / 200 czk</div>
                 <ul class="features">
-                  <li>Jednoduchá optimalizace Windowsu</li>
-                  <li>Vyčištění nepotřebných souborů</li>
-                  <li>Snížení odezvy</li>
+                  <li>Rozsáhlá optimalizace Windowsu</li>
+                  <li>Vyčištění celého systému</li>
+                  <li>Snížení internetové odezvy (ping)</li>
+                  <li>Zvýšení výkonu ve hrách</li>
                 </ul>
                 <a href="#" class="btn buy-now">Koupit</a>
               </div>
@@ -112,19 +113,53 @@
           <div class="price-column">
             <div class="price-card">
               <div class="price-content">
-                <h3 class="title">InfinityX standard</h3>
-                <div class="price">€7.99 / 200 czk</div>
+                <h3 class="title">InfinityX PREMIUM</h3>
+                <div class="price">€19.99 / 500 czk</div>
                 <ul class="features">
-                  <li>Pokročilá optimalizace Windowsu</li>
-                  <li>Vyčištění kompletního systému</li>
-                  <li>Nejnižší možná odezva</li>
-                  <li>Snížení internetové odezvy (ping)</li>
+                  <li>Reinstalace operačního systému</li>
+                  <li>Optimalizace BIOS</li>
+                  <li>Nejkvalitnější optimalizace Windows</li>
+                  <li>Nejvyšší možný výkon</li>
                 </ul>
                 <a href="#" class="btn buy-now">Koupit</a>
               </div>
             </div>
           </div>
         </div>
+
+        <div class="price-row">
+            <div class="price-column">
+              <div class="price-card">
+                <div class="price-content">
+                  <h3 class="title">Oprava operačního systému</h3>
+                  <div class="price">€14.99 / 369 czk</div>
+                  <ul class="features">
+                    <li>Spojení se s klientem</li>
+                    <li>Diagnostika problému</li>
+                    <li>Vyřešení problému</li>
+                    <li>Spokojený klient</li>
+                  </ul>
+                  <a href="#" class="btn buy-now">Koupit</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="price-column">
+              <div class="price-card">
+                <div class="price-content">
+                  <h3 class="title">Jiné věci v oblasti IT</h3>
+                  <div class="price">Dle domluvy</div>
+                  <ul class="features">
+                    <li>Odvirování počítače</li>
+                    <li>Nastavení softwaru</li>
+                    <li>Výběr komponent do PC</li>
+                    <li>Další specifické problémy</li>
+                  </ul>
+                  <a href="#" class="btn buy-now">Koupit</a>
+                </div>
+              </div>
+            </div>
+          </div>
       </section>
       
    
@@ -151,22 +186,22 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>FPS <span>120FPS</span></h3>
+                            <h3>Snímky za vteřinu (FPS) <span>120FPS</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Input delay <span>20ms</span></h3>
+                            <h3>Odezva <span>20ms</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Ping <span>35ms</span></h3>
+                            <h3>Odezva - ping <span>35ms</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Smooth hra <span>25%</span></h3>
+                            <h3>Plynulost hry <span>25%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -181,22 +216,22 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>FPS <span>240+ FPS</span></h3>
+                            <h3>Snímky za vteřinu (FPS) <span>240+ FPS</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Input delay <span>4ms</span></h3>
+                            <h3>Odezva <span>4ms</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Ping <span>20ms</span></h3>
+                            <h3>Odezva - ping <span>20ms</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Smooth hra <span>85%</span></h3>
+                            <h3>Plynulost hry <span>85%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -255,7 +290,7 @@
         </form>
     </section> -->
 
- <div class="login">
+ <!--<div class="login">
     <h2>Přihlásit se</h2>
         <form>
             <div class="input-box">
@@ -272,7 +307,7 @@
                 <button type="submit" class="btn">Login</button>
             </div>
         </form>
-    </div>
+    </div>-->
 
 
 
