--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#about">O programu</a>
             <a href="#price-list">Ceník</a>
             <a href="#skills">Porovnání</a>
-            <a href="#faq">FAQ</a>
+            <a href="FAQ.html">FAQ</a>
             <a href="#price-list">Přihlásit se</a>
 
             <span class="active-nav"></span>
@@ -231,7 +231,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Plynulost hry <span>85%</span></h3>
+                            <h3>Plynulost hry <span>100%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
