--- a/FAQ.html
+++ b/FAQ.html
@@ -25,7 +25,7 @@
             <a href="index.html#price-list">Ceník</a>
             <a href="index.html#skills">Porovnání</a>
             <a href="#faq" class="active">FAQ</a>
-            <a href="#price-list">Přihlásit se</a>
+            <a href="Register.html">Přihlásit se</a>
 
             <span class="active-nav"></span>
             <span class="animate" style="--i:2;"></span>
