--- a/Register.html
+++ b/Register.html
@@ -4,38 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Login & Register</title>
+    <title>Přihlášení</title>
+    <!-- box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+    <!-- header design -->
+    <header class="header">
+        <a href="index.html" class="logo">InfinityX<span class="animate" style="--i:1;"></span></a>
+
+        <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
+
+        <nav class="navbar">
+            <a href="index.html" >Domů</a>
+            <a href="index.html#about">O programu</a>
+            <a href="index.html#price-list">Ceník</a>
+            <a href="index.html#skills">Porovnání</a>
+            <a href="FAQ.html">FAQ</a>
+            <a href="#price-list"class="active">Přihlásit se</a>
+
+            <span class="active-nav"></span>
+            <span class="animate" style="--i:2;"></span>
+        </nav>
+    </header>
 <body>
     <div class="container">
-        <div class="form-container login-form">
-            <h2>Login</h2>
+        <div class="form-container login-form activ">
+            <h2>Přihlášení</h2>
+            <p class="switch-link">Ještě nemáš účet? <a href="#" id="switch-to-register">Zaregistruj se</a></p>
             <form id="login-form">
                 <div class="input-box">
-                    <input type="text" id="login-username" placeholder="Username" required>
+                    <input type="text" id="login-username" placeholder="Uživatelské jméno" required>
                 </div>
                 <div class="input-box">
-                    <input type="password" id="login-password" placeholder="Password" required>
+                    <input type="password" id="login-password" placeholder="Heslo" required>
                 </div>
-                <button type="submit">Login</button>
+                <button type="submit">Přihlásit se</button>
             </form>
         </div>
         <div class="form-container register-form">
-            <h2>Register</h2>
+            <h2>Registrace</h2>
+            <p class="switch-link">Už máš účet? <a href="#" id="switch-to-login">Přihlaš se</a></p>
             <form id="register-form">
                 <div class="input-box">
-                    <input type="text" id="register-username" placeholder="Username" required>
+                    <input type="text" id="register-username" placeholder="Uživatelské jméno" required>
                 </div>
                 <div class="input-box">
                     <input type="email" id="register-email" placeholder="Email" required>
                 </div>
                 <div class="input-box">
-                    <input type="password" id="register-password" placeholder="Password" required>
+                    <input type="password" id="register-password" placeholder="Heslo" required>
                 </div>
-                <button type="submit">Register</button>
+                <div class="input-box">
+                    <input type="checkbox" id="agree-to-terms" required>
+                    <label for="agree-to-terms">Souhlasím s <a href="terms.html" target="_blank">podmínkami</a> a <a href="terms.html" target="_blank">zásadami ochrany osobních údajů</a></label>
+                </div>
+                <button type="submit">Registrovat se</button>
             </form>
         </div>
-    </div>
+        
+
+
+
+
     <script src="js/scriptLOGIN.js"></script>
 </body>
 </html>
