--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#price-list">Ceník</a>
             <a href="#skills">Porovnání</a>
             <a href="FAQ.html">FAQ</a>
-            <a href="#price-list">Přihlásit se</a>
+            <a href="Register.html">Přihlásit se</a>
 
             <span class="active-nav"></span>
             <span class="animate" style="--i:2;"></span>
@@ -290,24 +290,7 @@
         </form>
     </section> -->
 
- <!--<div class="login">
-    <h2>Přihlásit se</h2>
-        <form>
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="text" placeholder="Username" required>
-                    <span class="focus"></span>
-                </div>
-                <div class="input-field">
-                    <input type="password" placeholder="Password" required>
-                    <span class="focus"></span>
-                </div>
-            </div>
-            <div class="btn-box btns">
-                <button type="submit" class="btn">Login</button>
-            </div>
-        </form>
-    </div>-->
+   
 
 
 
