--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
             <div class="price-card">
               <div class="price-content">
                 <h3 class="title">InfinityX STANDARD</h3>
-                <div class="price">€7.99 / 200 czk</div>
+                <div class="price">€7.99 / 199 czk</div>
                 <ul class="features">
                   <li>Rozsáhlá optimalizace Windowsu</li>
                   <li>Vyčištění celého systému</li>
                   <li>Snížení internetové odezvy (ping)</li>
                   <li>Zvýšení výkonu ve hrách</li>
                 </ul>
-                <a href="#" class="btn buy-now">Koupit</a>
+                <a href="Standard.html" class="btn buy-now">Koupit</a>
               </div>
             </div>
           </div>
@@ -114,7 +114,7 @@
             <div class="price-card">
               <div class="price-content">
                 <h3 class="title">InfinityX PREMIUM</h3>
-                <div class="price">€19.99 / 500 czk</div>
+                <div class="price">€19.99 / 499 czk</div>
                 <ul class="features">
                   <li>Reinstalace operačního systému</li>
                   <li>Optimalizace BIOS</li>
